# crammer

./: .env.example  .gitignore  README.md  pyproject.toml  start.bat
.claude/: settings.local.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  router.tsx
reviewer/: __init__.py  __main__.py  config.py  db.py  ingest.py  models.py  repository.py  schema.py
reviewer/ai/: __init__.py  client.py  errors.py  gemini.py  prompts.py
reviewer/generation/: __init__.py  chunker.py  generator.py  parser.py  prompts.py  schemas.py  store.py
reviewer/parsing/: __init__.py  base.py  dispatch.py  docx_reader.py  image_reader.py  pdf_reader.py  pptx_reader.py  spreadsheet_reader.py  text_reader.py  web_reader.py
reviewer/practice/: __init__.py  test.py
reviewer/progress/: __init__.py  mastery.py  (+2 more)
tests/: conftest.py  test_api.py  test_chunker.py  test_client.py  test_config.py  test_dispatch.py  test_docx_reader.py  test_gemini.py  test_generation_e2e.py  test_generation_parser.py  test_generation_store.py  test_generator.py  test_image_reader.py  test_ingest.py  test_mastery.py  test_parsing_base.py  test_pdf_reader.py  test_pptx_reader.py  test_practice.py  test_prompts.py  test_repository.py  test_review.py  test_schema.py  test_selection.py  test_sm2.py  test_spreadsheet_reader.py  test_stats.py  test_storage_e2e.py  test_streaks.py  test_text_reader.py  test_web_dashboard.py  test_web_document.py  test_web_exam_date.py  test_web_hardening.py  test_web_practice.py  test_web_reader.py  test_web_session.py  test_web_study.py  test_web_upload.py
(+56 files in other folders)
