[project]
name = "reviewer"
version = "0.1.0"
description = "Local study reviewer app with short-term spaced repetition"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
