[project]
name = "reviewer"
version = "0.1.0"
description = "Local study reviewer app with short-term spaced repetition"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "Pillow>=10.0",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "EbookLib>=0.18",
    "striprtf>=0.0.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "fpdf2>=2.7",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
